<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    android:background="#000000">

    <LinearLayout
        android:id="@+id/buttons_group2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:padding="5dp"
            android:scaleType="fitCenter"
            android:id="@+id/multiplier"
            android:src="@drawable/nine"
            android:background="@null"
            android:text="@string/game_mode"
            android:contentDescription="@string/game_mode"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:padding="5dp"
            android:scaleType="fitCenter"
            android:id="@+id/skin"
            android:background="@null"
            android:src="@drawable/cell_wood"
            android:text="@string/skin"
            android:contentDescription="@string/skin"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:padding="5dp"
            android:scaleType="fitCenter"
            android:id="@+id/reset"
            android:background="@null"
            android:src="@drawable/ic_action_refresh"
            android:text="@string/reset"
            android:contentDescription="@string/reset"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:padding="5dp"
            android:scaleType="fitCenter"
            android:id="@+id/sound"
            android:background="@null"
            android:src="@drawable/sound_on"
            android:text="@string/sound"
            android:contentDescription="@string/sound" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/moves_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/moves"
            android:textColor="#fff"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/moves_counter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/moves_counter"
            android:textColor="#fff"
            android:textSize="20sp" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/background"
        android:layout_gravity="center"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/back_wood">

        <com.example.fifteenpuzzle.DrawView
            android:id="@+id/drawView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:hardwareAccelerated="true" />
    </FrameLayout>
</LinearLayout>